<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

class User extends Authenticatable
{
    /** @use HasFactory<\Database\Factories\UserFactory> */
    use HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var list<string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
        'role_id',
        'balance',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var list<string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
        ];
    }

    public function role()
    {
        return $this->belongsTo(Role::class);
    }

    public function lendings()
    {
        return $this->hasMany(Lending::class);
    }

    public function fines()
    {
        return $this->hasMany(Fine::class);
    }

    public function uploadedBooks()
    {
        return $this->hasMany(Book::class, 'uploader_id');
    }

    public function booksForSale()
    {
        return $this->hasMany(BookForSale::class);
    }

    public function purchases()
    {
        return $this->hasMany(Purchase::class);
    }

    public function wishlists()
    {
        return $this->hasMany(Wishlist::class);
    }
}
